# inkscape

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  INSTALL.md  TRANSLATORS  canvas-item-ctrl.cpp  canvas-item-ctrl.h  config.h.cmake  inkscape.py  test  zh_CN.po
CMakeScripts/: ConfigCPack.cmake  DefineDependsandFlags.cmake  InstallMSYS2.cmake  inkscape-version.cmake
buildtools/: check_license_headers.py  msys2installdeps.sh
packaging/macos/: README.md
po/: POTFILES.src.in  POTFILES.ui.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fa.po  he.po  hu.po  inkscape.pot  inkscape_sr.po  is.po  it.po  ja.po  nb.po  nl.po  pl.po  pt_BR.po  ro.po  ta.po  tr.po  uk.po  zh_CN.po  zh_TW.po
share/: CMakeLists.txt  share
share/templates/: CMakeLists.txt
snap/: snapcraft.yaml
src/: CMakeLists.txt  action-table.cpp  action-table.h  alignment-snapper.cpp  attribute-rel-util.cpp  attribute-sort-util.cpp  attributes.cpp  attributes.h  auto-save.cpp  auto-save.h  conn-avoid-ref.cpp  context-fns.cpp  desktop-events.cpp  desktop-style.cpp  desktop.cpp  desktop.h  document.cpp  document.h  doxygen-main.dox  enums.h  event-log.cpp  file-update.cpp  file.cpp  filter-chemistry.cpp  gradient-chemistry.cpp  gradient-chemistry.h  gradient-drag.cpp  hsluv.cpp  hsluv.h  id-clash.cpp  inkscape-application.cpp  inkscape-application.h  inkscape-main.cpp  inkscape-version-info.cpp  inkscape-version.cpp.in  inkscape-version.h  inkscape-window.cpp  inkscape-window.h  inkscape.cpp  inkscape.h  (+43 more)
testfiles/: CMakeLists.txt  lpes-test.h  lpespaths-test.h
(+727 files in other folders)
